sumo/tests/sumo/errors/duplicates/route_oldstyle_plainemission/errors.sumo
Error: Another route with the id '0' exists.
Quitting (on error).
